Foodorder first commit

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Masala House | www.IndianMasalaHouse.com</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width:900px)" href="phone.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" media="screen and (max-width:900px)" href="CSS/phone.css">
 
 </head>
 
 <body>
     <div id="navbar">
         <div id="logo">
-            <img src="logo1.jpg" alt="IndianFood.com">
+            <img src="img/logo1.jpg" alt="IndianFood.com">
         </div>
 
         <ul>
@@ -47,7 +47,7 @@
         <h1 class="h2-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="NorthIndianFood.avif" alt="">
+                <img src="img/NorthIndianFood.avif" alt="">
                 <h2 class="h-secondary">North Indian Food</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolorum in iste
                     molestias
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="box">
-                <img src="SouthIndianFood.jpg" alt="">
+                <img src="img/SouthIndianFood.jpg" alt="">
                 <h2 class="h-secondary">South Indian Food</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolorum in iste
                     molestias
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="box">
-                <img src="image2.avif" alt="">
+                <img src="img/image2.avif" alt="">
                 <h2 class="h-secondary">Food Delivery</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolorum in iste
                     molestias
@@ -88,28 +88,28 @@
         <h1 class="h3-primary center"> Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="MicrosoftLogo.png" alt="Our Client">
+                <img src="img/MicrosoftLogo.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="amazonlogo.png" alt="Our Client">
+                <img src="img/amazonlogo.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="apple logo.png" alt="Our Client">
+                <img src="img/apple logo.png" alt="Our Client">
             </div>
             <div class="client-item ">
-                <img src="tcs logo.jpg" alt="Our Client">
+                <img src="img/tcs logo.jpg" alt="Our Client">
             </div>
             <div class="client-item ">
-                <img src="infosis logo.jpg" alt="Our Client">
+                <img src="img/infosis logo.jpg" alt="Our Client">
             </div>
             <div class="client-item ">
-                <img src="adobe logo.png" alt="Our Client">
+                <img src="img/adobe logo.png" alt="Our Client">
             </div>
             <div class="client-item ">
-                <img src="cubetech logo.jpeg" alt="Our Client">
+                <img src="img/cubetech logo.jpeg" alt="Our Client">
             </div>
             <div class="client-item ">
-                <img src="skyhigh logo.jpg" alt="Our Client">
+                <img src="img/skyhigh logo.jpg" alt="Our Client">
             </div>
         </div>
     </section>
